<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/produto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="6dp"
    android:background="@drawable/sombra_card"
    android:elevation="3.3dp">

    <TextView
        android:id="@+id/idView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_id"
        tools:visibility="invisible" />

    <android.support.v7.widget.CardView
        android:id="@+id/containerpi"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_marginBottom="-7dp"
        app:cardCornerRadius="7dp">

        <ImageView
            android:id="@+id/imagemProduto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/imagem_prod"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/sem_imagem" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/containerpi">

        <LinearLayout
            android:id="@+id/infoProduto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/iPcontainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/infoTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="11dp"
                    android:paddingTop="11dp"
                    android:text="@string/default_ptitle"
                    android:textSize="15.3sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/infoCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="11dp"
                    android:paddingTop="1dp"
                    android:paddingBottom="11dp"
                    android:text="@string/category" />
            </LinearLayout>

            <TextView
                android:id="@+id/precoProduto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:paddingRight="14dp"
                android:text="@string/default_pprice"
                android:textColor="#FE8B56"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>