<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/topo_settingsd"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/gradiente"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/goback"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="33dp"
            android:layout_height="44dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="29dp"
            android:layout_marginRight="18dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="30dp"
                android:gravity="bottom"
                android:text="@string/settings"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/conteudosett"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topo_settingsd"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView404"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container3"
            android:layout_marginTop="10dp"
            android:text="@string/pergunta2"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/container404"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textView404"
            android:layout_marginTop="17dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/settingsName"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:background="@drawable/inputs"
                    android:hint="@string/nome"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#707070"
                    android:textColorHint="#707070"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fixarObotao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/conteudosett"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="30dp"
            android:gravity="bottom"
            android:orientation="horizontal">


            <Button
                android:id="@+id/continuarsettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_verm"
                android:text="@string/confirmar"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>