<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiente"
    tools:context=".VerActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:background="@drawable/rectangle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:paddingBottom="72dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/addNewProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp">

                    <RelativeLayout
                        android:id="@+id/verTopo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.CardView
                            android:id="@+id/containerImagem"
                            android:layout_width="match_parent"
                            android:layout_height="190.6dp"
                            android:layout_marginBottom="-6dp"
                            app:cardCornerRadius="5.3dp">

                            <ImageView
                                android:id="@+id/verImagem"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/add_titulo"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/sem_imagem" />

                        </android.support.v7.widget.CardView>

                    </RelativeLayout>

                    <Button
                        android:id="@+id/precoBox"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="150dp"
                        android:layout_height="85dp"
                        android:layout_alignTop="@id/verTopo"
                        android:layout_alignRight="@id/verTopo"
                        android:layout_marginTop="144dp"
                        android:text="@string/default_pprice"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/textoLaranja"
                        android:layout_marginRight="6dp"
                        android:background="@drawable/box_preco"
                        android:contentDescription="@string/add_titulo"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/verTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/precoBox"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/insert_t"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/verCategoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/verTitulo"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/category"
                        android:textSize="17sp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:id="@+id/openBrowser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/verCategoria"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="16dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/openb"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/browser" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/openb"
                            android:textColor="@color/textoLaranja"
                            android:layout_marginBottom="2dp"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/progressoVertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/openBrowser"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="12dp"
                        android:orientation="vertical">

                        <android.support.constraint.ConstraintLayout
                            android:id="@+id/progressoBox"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:orientation="horizontal"
                            android:background="@drawable/progressobox">

                            <LinearLayout
                                android:id="@+id/progresso"
                                android:layout_width="0dp"
                                android:layout_height="20dp"
                                android:background="@drawable/progressobar"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintHeight_percent="1"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintWidth_percent="0.5" />


                        </android.support.constraint.ConstraintLayout>

                        <android.support.constraint.ConstraintLayout
                            android:id="@+id/progressoTexto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:id="@+id/percentagemLinear"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="11dp"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintWidth_percent="1">

                                <TextView
                                    android:id="@+id/progressoValor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:gravity="right"
                                    android:text="@string/default_percentage"
                                    android:textColor="@color/textoLaranja"
                                    android:textSize="17sp"
                                    android:textStyle="bold"
                                    app:layout_constraintWidth_percent="1" />
                            </LinearLayout>

                        </android.support.constraint.ConstraintLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/botoesSavings"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_below="@id/progressoVertical"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="7dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/addSavings"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/botoes_saving"
                            android:text="@string/add_savings"
                            android:textAllCaps="false" />

                        <Button
                            android:id="@+id/removeSavings"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/botoes_saving"
                            android:text="@string/remove_savings"
                            android:textAllCaps="false" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/savingsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/botoesSavings"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="12dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/savingsRV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </RelativeLayout>
            </ScrollView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/containerB5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="bottom"
            android:orientation="horizontal">


            <Button
                android:id="@+id/eContinuarButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_verd"
                android:text="@string/finish"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eMudarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_cinz"
                android:text="@string/remover"
                android:textAllCaps="false"
                android:textColor="#707070"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
